Compilation error on build-webkit --debug --no-3d-canvas on mac. https://bugs.webkit.org/show_bug.cgi?id=75878

Patch by Pablo Flouret <pablof@motorola.com> on 2012-01-09
Reviewed by Alexey Proskuryakov.

* html/canvas/WebGLContextEvent.cpp:

Canonical link: https://commits.webkit.org/92686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104490 268f45cc-cd09-0410-ab3c-d52691b4dbfc