Source/WebCore/html/canvas/WebGLContextEvent.cpp
@@ -28,6 +28,8 @@
 
 #include "EventNames.h"
 
+#if ENABLE(WEBGL)
+
 namespace WebCore {
 
 WebGLContextEventInit::WebGLContextEventInit()
@@ -60,3 +62,5 @@ const AtomicString& WebGLContextEvent::interfaceName() const
 }
 
 } // namespace WebCore
+
+#endif // ENABLE(WEBGL)
